# Game-of-Chess

./: CHANGELOG.md  GameofChess.cabal  README.md  fourmolu.yaml
app/: GameController.hs  GameInit.hs  GameLogic.hs  Main.hs  Types.hs
app/GameLogic/: Actions.hs  Rules.hs
app/UI/: Common.hs  Config.hs  Terminal.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
