cabal-version:      2.4
name:               GameofChess
version:            0.1.0.0
synopsis:           Terminal-based chess game in Haskell
description:        A lightweight chess game playable via the terminal, featuring modular code and future extensibility for AI and networking.
homepage:           None
license:            NONE
author:             Dr. Mazen Khaddaj
maintainer:         mazenkhaddaj@outlook.com
category:           Game
extra-source-files: CHANGELOG.md

executable GameofChess
    main-is:          Main.hs
    other-modules:    Types
                      GameLogic
                      GameInit
                      GameController
                      UI.Terminal
                      UI.Common
                      UI.Config
    build-depends:    base ^>=4.18.3.0,
                      ansi-terminal,
                      mtl,
                      containers
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions: OverloadedStrings
                        RecordWildCards
                        DerivingStrategies
                        DerivingVia
                        GeneralizedNewtypeDeriving
                        BangPatterns
    ghc-options:    -Wall
                    -Wcompat
                    -Wredundant-constraints
                    -Widentities
                    -Wpartial-fields
                    -Wmissing-export-lists
                    -- -Werror
